kubernetes/home/apps/selfhosted/arrs/app/oidc.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-arrs-radarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: arrs-radarr
  oidc:
    provider:
      issuer: "https://id.albdev.cloud"
    clientIDRef:
      name: "envoy-oidc-secret-radarr"
    clientSecret:
      name: "envoy-oidc-secret-radarr"
    redirectURL: "https://radarr.${CLUSTER_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    scopes: ["openid", "profile", "email"]
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-arrs-sonarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: arrs-sonarr
  oidc:
    provider:
      issuer: "https://id.albdev.cloud"
    clientIDRef:
      name: "envoy-oidc-secret-sonarr"
    clientSecret:
      name: "envoy-oidc-secret-sonarr"
    redirectURL: "https://sonarr.${CLUSTER_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    scopes: ["openid", "profile", "email"]
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-arrs-sabnzbd
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: arrs-sabnzbd
  oidc:
    provider:
      issuer: "https://id.albdev.cloud"
    clientIDRef:
      name: "envoy-oidc-secret-sabnzbd"
    clientSecret:
      name: "envoy-oidc-secret-sabnzbd"
    redirectURL: "https://sabnzbd.${CLUSTER_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    scopes: ["openid", "profile", "email"]
